Fixed color codes button not showing on the first click

--- a/new.css
+++ b/new.css
@@ -520,7 +520,7 @@ input[type=radio]{
     }
     #colors{
         visibility: visible;
-        left: 30%;
+        left: 10%;
         bottom: 1%;
     }
     #displaycolors{
